Corrected the left and right div to be aligned left and right respectively

--- a/styles/GlobalStyles.css
+++ b/styles/GlobalStyles.css
@@ -22,46 +22,42 @@ header {
   padding: 1%;
 }
 
+.left,
+.middle,
+.right {
+  display: flex;
+  align-items: center;
+}
+
+.left {
+  justify-content: space-between;
+  flex: 40%;
+}
+
+.middle {
+  justify-content: center;
+  flex: 20%;
+}
+
+.right {
+  justify-content: flex-end;
+  flex: 40%;
+}
+
 .nav-link,
 .nav-link-middle,
 .nav-link-right {
   text-decoration: none;
   color: black;
-  padding: 0 1%;
-}
-
-.nav-link {
-  flex: 1;
 }
 
 .nav-link-right {
   padding-right: 2%;
 }
 
-.left, .right {
-  flex: 1;
-  display: flex;
-  align-items: center;
-}
-
-.left {
-  justify-content: flex-start;
-}
-
-.right {
-  justify-content: flex-end;
-}
-
-.middle {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex: 0.5;
-}
-
 #logo {
-  width: 80%;
-  height: 80%;
+  width: 100%;
+  height: auto;
 }
 
 .clients-portal {
@@ -97,34 +93,16 @@ header {
   html {
       font-size: 9px;
   }
-}
 
-/* Mobile View */
-@media screen and (max-width: 580px) {
+  .left,
+  .middle,
+  .right {
+      flex: 100%;
+  }
+  
   #logo {
       width: 60%;
-      height: 60%;
-  }
-  
-  .nav-link,
-  .nav-link-middle {
-      font-size: 0.8rem;
-      flex: 1;
-      padding: 12% 4%;
-  }
-  
-  .middle {
-      flex: 1;
-  }
-}
-
-/* Tablet View */
-@media screen and (max-width: 1050px) {
-  .nav-link,
-  .nav-link-middle {
-      font-size: 0.8rem;
-      max-width: 40%;
-      padding: 12% 2%;
+      height: auto;
   }
 }
 
